// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert-to-flat-config generator should add env configuration 1`] = `
"import nxEslintPlugin from "@nx/eslint-plugin";
import { FlatCompat } from "@eslint/eslintrc";
const eslintrc = new FlatCompat({
    baseDirectory: __dirname
});
export default [
    { ignores: ["**/*"] },
    { ignores: ["node_modules"] },
    { plugins: {
            "@nx": nxEslintPlugin
        } },
    { env: {
            browser: true,
            node: true
        } },
    {
        files: [
            "*.ts",
            "*.tsx",
            "*.js",
            "*.jsx"
        ],
        rules: { @nx/enforce-module-boundaries: [
                "error",
                {
                    enforceBuildableLibDependency: true,
                    allow: [],
                    depConstraints: [{
                            sourceTag: "*",
                            onlyDependOnLibsWithTags: ["*"]
                        }]
                }
            ] }
    },
    {
        files: [
            "*.ts",
            "*.tsx"
        ],
        extends: ["plugin:@nx/typescript"],
        rules: {}
    },
    {
        files: [
            "*.js",
            "*.jsx"
        ],
        extends: ["plugin:@nx/javascript"],
        rules: {}
    }
];
"
`;

exports[`convert-to-flat-config generator should add global gitignores 1`] = `
"import nxEslintPlugin from "@nx/eslint-plugin";
import { FlatCompat } from "@eslint/eslintrc";
const eslintrc = new FlatCompat({
    baseDirectory: __dirname
});
export default [
    { ignores: ["**/*"] },
    { ignores: ["ignore/me"] },
    { plugins: {
            "@nx": nxEslintPlugin
        } },
    {
        files: [
            "*.ts",
            "*.tsx",
            "*.js",
            "*.jsx"
        ],
        rules: { @nx/enforce-module-boundaries: [
                "error",
                {
                    enforceBuildableLibDependency: true,
                    allow: [],
                    depConstraints: [{
                            sourceTag: "*",
                            onlyDependOnLibsWithTags: ["*"]
                        }]
                }
            ] }
    },
    {
        files: [
            "*.ts",
            "*.tsx"
        ],
        extends: ["plugin:@nx/typescript"],
        rules: {}
    },
    {
        files: [
            "*.js",
            "*.jsx"
        ],
        extends: ["plugin:@nx/javascript"],
        rules: {}
    }
];
"
`;

exports[`convert-to-flat-config generator should add parser 1`] = `
"import nxEslintPlugin from "@nx/eslint-plugin";
import typescriptEslintParser from "@typescript-eslint/parser";
import { FlatCompat } from "@eslint/eslintrc";
const eslintrc = new FlatCompat({
    baseDirectory: __dirname
});
export default [
    { ignores: ["**/*"] },
    { ignores: ["node_modules"] },
    { plugins: {
            "@nx": nxEslintPlugin
        } },
    {
        languageOptions: {
            parser: typescriptEslintParser
        }
    },
    {
        files: [
            "*.ts",
            "*.tsx",
            "*.js",
            "*.jsx"
        ],
        rules: { @nx/enforce-module-boundaries: [
                "error",
                {
                    enforceBuildableLibDependency: true,
                    allow: [],
                    depConstraints: [{
                            sourceTag: "*",
                            onlyDependOnLibsWithTags: ["*"]
                        }]
                }
            ] }
    },
    {
        files: [
            "*.ts",
            "*.tsx"
        ],
        extends: ["plugin:@nx/typescript"],
        rules: {}
    },
    {
        files: [
            "*.js",
            "*.jsx"
        ],
        extends: ["plugin:@nx/javascript"],
        rules: {}
    }
];
"
`;

exports[`convert-to-flat-config generator should add plugins 1`] = `
"import eslintPluginImport from "eslint-plugin-import";
import eslintPluginSingleName from "eslint-plugin-single-name";
import scopeEslintPluginWithName from "@scope/eslint-plugin-with-name";
import justScopeEslintPlugin from "@just-scope/eslint-plugin";
import { FlatCompat } from "@eslint/eslintrc";
const eslintrc = new FlatCompat({
    baseDirectory: __dirname
});
export default [
    { ignores: ["**/*"] },
    { ignores: ["node_modules"] },
    { plugins: {
            "eslint-plugin-import": eslintPluginImport,
            "single-name": eslintPluginSingleName,
            "@scope/with-name": scopeEslintPluginWithName,
            "@just-scope": justScopeEslintPlugin
        } },
    {
        files: [
            "*.ts",
            "*.tsx",
            "*.js",
            "*.jsx"
        ],
        rules: { @nx/enforce-module-boundaries: [
                "error",
                {
                    enforceBuildableLibDependency: true,
                    allow: [],
                    depConstraints: [{
                            sourceTag: "*",
                            onlyDependOnLibsWithTags: ["*"]
                        }]
                }
            ] }
    },
    {
        files: [
            "*.ts",
            "*.tsx"
        ],
        extends: ["plugin:@nx/typescript"],
        rules: {}
    },
    {
        files: [
            "*.js",
            "*.jsx"
        ],
        extends: ["plugin:@nx/javascript"],
        rules: {}
    }
];
"
`;

exports[`convert-to-flat-config generator should add settings 1`] = `
"import nxEslintPlugin from "@nx/eslint-plugin";
import { FlatCompat } from "@eslint/eslintrc";
const eslintrc = new FlatCompat({
    baseDirectory: __dirname
});
export default [
    { ignores: ["**/*"] },
    { ignores: ["node_modules"] },
    { plugins: {
            "@nx": nxEslintPlugin
        } },
    { settings: { sharedData: "Hello" } },
    {
        files: [
            "*.ts",
            "*.tsx",
            "*.js",
            "*.jsx"
        ],
        rules: { @nx/enforce-module-boundaries: [
                "error",
                {
                    enforceBuildableLibDependency: true,
                    allow: [],
                    depConstraints: [{
                            sourceTag: "*",
                            onlyDependOnLibsWithTags: ["*"]
                        }]
                }
            ] }
    },
    {
        files: [
            "*.ts",
            "*.tsx"
        ],
        extends: ["plugin:@nx/typescript"],
        rules: {}
    },
    {
        files: [
            "*.js",
            "*.jsx"
        ],
        extends: ["plugin:@nx/javascript"],
        rules: {}
    }
];
"
`;

exports[`convert-to-flat-config generator should run successfully 1`] = `
"import nxEslintPlugin from "@nx/eslint-plugin";
import { FlatCompat } from "@eslint/eslintrc";
const eslintrc = new FlatCompat({
    baseDirectory: __dirname
});
export default [
    { ignores: ["**/*"] },
    { ignores: ["node_modules"] },
    { plugins: {
            "@nx": nxEslintPlugin
        } },
    {
        files: [
            "*.ts",
            "*.tsx",
            "*.js",
            "*.jsx"
        ],
        rules: { @nx/enforce-module-boundaries: [
                "error",
                {
                    enforceBuildableLibDependency: true,
                    allow: [],
                    depConstraints: [{
                            sourceTag: "*",
                            onlyDependOnLibsWithTags: ["*"]
                        }]
                }
            ] }
    },
    {
        files: [
            "*.ts",
            "*.tsx"
        ],
        extends: ["plugin:@nx/typescript"],
        rules: {}
    },
    {
        files: [
            "*.js",
            "*.jsx"
        ],
        extends: ["plugin:@nx/javascript"],
        rules: {}
    }
];
"
`;

exports[`convert-to-flat-config generator should run successfully 2`] = `
"import baseConfig from '../../.eslintrc.json';
import { FlatCompat } from '@eslint/eslintrc';
const eslintrc = new FlatCompat({
  baseDirectory: __dirname,
});
export default [
  ...baseConfig,
  { ignores: ['!**/*'] },
  {
    files: ['*.ts', '*.tsx', '*.js', '*.jsx'],
    rules: {},
  },
  {
    files: ['*.ts', '*.tsx'],
    rules: {},
  },
  {
    files: ['*.js', '*.jsx'],
    rules: {},
  },
];
"
`;
